# orchard_navigation_rl_ws

./: .gitignore  README.md
src/orchard_bc_training/: CHEATSHEET.md  package.xml  setup.cfg  setup.py
src/orchard_bc_training/launch/: bc_collect.launch.py  bc_deploy.launch.py
src/orchard_bc_training/orchard_bc_training/: bc_data_collector_node.py  bc_policy_node.py  bc_status_display.py  bc_viz_node.py  build_cache.py  models.py
src/orchard_bc_training/src/orchard_bc_training/: CHEATSHEET.md  orchard_bc_training_cheatsheet.md  package.xml  setup.py
src/orchard_bc_training/src/orchard_bc_training/launch/: bc_collect.launch.py  bc_deploy.launch.py
src/orchard_bc_training/src/orchard_bc_training/orchard_bc_training/: bc_cmd_vel_mux_node.py  bc_data_collector_node.py  bc_policy_node.py  bc_status_display.py  bc_viz_node.py  build_cache.py  datasets.py  train.py  vae_resolve.py
src/orchard_data_collector/: package.xml  setup.cfg  setup.py
src/orchard_data_collector/config/: collector_params.yaml
src/orchard_data_collector/launch/: collect.launch.py
src/orchard_data_collector/orchard_data_collector/: data_collector_node.py
src/orchard_nav_deploy/: package.xml  setup.cfg  setup.py
src/orchard_nav_deploy/config/: deploy_params.yaml
src/orchard_nav_deploy/launch/: dagger_collect.launch.py  deploy_policy.launch.py
src/orchard_nav_deploy/orchard_nav_deploy/: cmd_vel_mux_node.py  dagger_status_display.py  dagger_supervisor_node.py  policy_node.py
src/orchard_worlds/: CMakeLists.txt  README.md  orchard_straight_rows_world_sdf_generator.py  package.xml
src/orchard_worlds/launch/: simulation.launch.py
src/orchard_worlds/models/orchard_model/: model.config  model.sdf  orchard_ground_visual.dae  tree10_collision.stl  tree11_collision.stl  tree12_collision.stl  tree13_collision.stl  tree14.stl  tree14_collision.stl  tree15_collision.stl  tree16.stl  tree16_collision.stl  tree1_collision.stl  tree2_collision.stl  tree3_collision.stl  tree4.stl  tree4_collision.stl  tree5_collision.stl  tree6_collision.stl  tree7_collision.stl  tree8_collision.stl  tree9.stl  tree9_collision.stl  tree_1_collision.stl  tree_2_collision.stl  tree_3_collision.stl  tree_4_collision.stl  tree_5_collision.stl
src/orchard_worlds/worlds/: orchard_4rows_20trees.sdf  orchard_dormant_world.sdf  orchard_world.sdf
