<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>orchard_bc_training</name>
  <version>0.7.3</version>
  <description>VAE+GRU+MLP behavior-cloning pipeline for orchard navigation: data collection, latent caching, training, and deploy. Compressed-image input variant. Fully self-contained (no runtime dependency on orchard_data_collector or orchard_nav_deploy).</description>
  <maintainer email="divyanthlg@todo.com">divyanthlg</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
